# data-expectations-validation-assistant

./: .gitignore  README.md  pyproject.toml
src/deva/: _version.py  common.py  datadictionary_utils.py
src/deva/actions/: characterize_datafile.py  generate_datadictionary.py  merge_datadictionary.py  validate_alignment.py
